# AuON

./: .gitignore  Auon_Adam_train.py  README.md  pyproject.toml  requirements.txt  setup.py
auon/: __init__.py  adam.py  muon.py  optimizer.py  utils.py
examples/: basic_usage.py
models/: __init__.py  components.py  custom_ops.py  gpt.py
scripts/: compare_optimizers.py  train.py
training/: __init__.py  config.py  trainer.py
